<?xml version="1.0"?>
<package format="2">
  <name>ros_turtle</name>
  <version>0.0.0</version>
  <description>The ros_turtle package</description>
  <maintainer email="bottle@todo.todo">bottle</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
